force-app/main/default/objects/Contact/fields/Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL__c</fullName>
    <description>url of contact picture</description>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>