force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  NOT( ISBLANK( Account.Id )) ,( MailingPostalCode &lt;&gt;  Account.ShippingPostalCode  ))</errorConditionFormula>
    <errorMessage>check that a contact is in the zip code of its account</errorMessage>
</ValidationRule>