force-app/main/default/objects/Contact/listViews/quiz.listView-meta.xml
<ListView>
    <fullName>quiz</fullName>
    <columns>FULL_NAME</columns>
    <columns>Scores__c</columns>
    <columns>Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>quiz</label>
</ListView>